--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -26,4 +26,9 @@
 	<url-pattern>/*</url-pattern>
 </filter-mapping>
 
+<error-page>
+  <error-code>404</error-code>
+  <location>/error/404.html</location>
+</error-page>
+
 </web-app>
